--- a/links.html
+++ b/links.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Links Ágata Cruz</title>
+
+    <link rel="stylesheet" href="estilos/links-style.css" media="all">
+    <link rel="stylesheet" href="estilos/links-media-query.css">
+    
 </head>
 <body>
-    
+    <main>
+        <div class="img-perfil">
+
+        </div>
+        <h1><span>Ágata</span> Cruz</h1>
+        <div class="lista-de-links">
+            <ul>
+                <li>Meu site</li><br>
+                <li>Fale Comigo</li><br>
+                <li>Consultoria R$97</li><br>
+                <li>Conheça meu trabalho</li><br>
+                <li>LinkedIn</li>
+            </ul>
+        </div>
+    </main>
 </body>
 </html>
