edit page links 2

--- a/links.html
+++ b/links.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,13 @@
 
     <link rel="stylesheet" href="estilos/links-style.css" media="all">
     <link rel="stylesheet" href="estilos/links-media-query.css">
-    
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
     <main>
         <div class="img-perfil">
@@ -18,13 +24,14 @@
         <h1><span>Ágata</span> Cruz</h1>
         <div class="lista-de-links">
             <ul>
-                <li>Meu site</li><br>
-                <li>Fale Comigo</li><br>
-                <li>Consultoria R$97</li><br>
-                <li>Conheça meu trabalho</li><br>
-                <li>LinkedIn</li>
+                <li><a href="#">Meu site</a></li><br>
+                <li><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></li><br>
+                <li><a href="#">Consultoria R$97</a></li><br>
+                <li><a href="https://www.behance.net/agatadesigner" target="_blank">Portifólio</a></li><br>
+                <li><a href="https://www.linkedin.com/in/agatacruz/" target="_blank">LinkedIn</a></li>
             </ul>
         </div>
     </main>
 </body>
+
 </html>
