add nova estrutura

--- a/links.html
+++ b/links.html
@@ -17,20 +17,24 @@
 </head>
 
 <body>
-    <main>
-        <div class="img-perfil">
-
-        </div>
+    <header>
+        <div class="img-perfil"></div>
         <h1><span>Ágata</span> Cruz</h1>
-        <div class="lista-de-links">
-            <ul>
-                <li><a href="#">Meu site</a></li><br>
-                <li><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></li><br>
-                <li><a href="#">Consultoria R$97</a></li><br>
-                <li><a href="https://www.behance.net/agatadesigner" target="_blank">Portifólio</a></li><br>
-                <li><a href="https://www.linkedin.com/in/agatacruz/" target="_blank">LinkedIn</a></li>
-            </ul>
-        </div>
+    </header>
+
+    <main class="lista-de-links">
+        <section class="sessao-item-1">
+            <a href="#">
+                <div>
+                    <span>Meu Site</span>
+                </div>
+            </a>
+        </section>
+        <section class="sessao-item-2">Fale Comigo</section>
+        <section class="sessao-item-3">Consultoria de Marketing R$97</section>
+        <section class="sessao-item-4">Portifólio</section>
+        <section class="sessao-item-5">LinkedIn</section>
+
     </main>
 </body>
 
