finish mobile version

--- a/links.html
+++ b/links.html
@@ -23,17 +23,41 @@
     </header>
 
     <main class="lista-de-links">
-        <section class="sessao-item-1">
-            <a href="#">
-                <div>
+        <section class="sessao-item">
+            <a href="#" target="_blank">
+                <div class="conteudo-item">
                     <span>Meu Site</span>
                 </div>
             </a>
         </section>
-        <section class="sessao-item-2">Fale Comigo</section>
-        <section class="sessao-item-3">Consultoria de Marketing R$97</section>
-        <section class="sessao-item-4">Portifólio</section>
-        <section class="sessao-item-5">LinkedIn</section>
+        <section class="sessao-item">
+            <a href="https:wa.me/71986261219" target="_blank">
+                <div class="conteudo-item">
+                    <span>Fale Comigo</span>
+                </div>
+            </a>
+        </section>
+        <section class="sessao-item">
+            <a href="#" target="_blank">
+                <div class="conteudo-item">
+                    <span>Sessão de consultoria de Marketing R$97</span>
+                </div>
+            </a>
+        </section>
+        <section class="sessao-item">
+            <a href="https://www.behance.net/agatadesigner" target="_blank">
+                <div class="conteudo-item">
+                    <span>Portifólio</span>
+                </div>
+            </a>
+        </section>
+        <section class="sessao-item">
+            <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">
+                <div class="conteudo-item">
+                    <span>LinkedIn</span>
+                </div>
+            </a>
+        </section>
 
     </main>
 </body>
