--- a/links.html
+++ b/links.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="estilos/links-style.css" media="all">
     <link rel="stylesheet" href="estilos/links-media-query.css">
 
+    <link rel="shortcut icon" href="imagens/favicon-agata-cruz-logo.png" type="image/x-icon">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
