--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ágata Cruz Portifólio</title>
+    <title>Ágata Cruz WebDesigner</title>
+
+    <link rel="stylesheet" href="estilos/home-style.css" media="all">
+    <link rel="stylesheet" href="estilos/home-media-query.css">
+
+    <link rel="shortcut icon" href="imagens/favicon-agata-cruz-logo.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
+
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <header>
+        <div>
+            <img src="" alt="">
+        </div>
+    </header>
+
+    <main>
+
+    </main>
+
+    <footer>
+        
+    </footer>
 </body>
 </html>
