add conteudo HTML page index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,19 +17,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
     <header>
-        <div>
-            <img src="" alt="">
+        <div class="logo-principal">
+            <a href="index.html"><img src="imagens/logo-agata-cruz.png" alt="Marca reduzida 'Ágata Cruz', apenas com as letras iniciais. Letra A e letra C."></a>
         </div>
+        <nav id="menu-principal">
+            <a href="#">sobre.</a>
+            <a href="#">trabalhos.</a>
+            <a href="#">serviços.</a>
+        </nav>
     </header>
 
     <main>
-
+        <div class="foto-principal">
+            <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
+        </div>
     </main>
 
     <footer>
-        
+
     </footer>
 </body>
+
 </html>
