--- a/index.html
+++ b/index.html
@@ -31,9 +31,16 @@
     </header>
 
     <main>
-        <div class="foto-principal">
-            <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
+        <div class="bloco-foto-texto">
+            <div class="foto-principal">
+                <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
+            </div>
+            <div class="texto-principal">
+                <span>Prazer</span>
+                <span class="nome">, Ágata Cruz</span>
+            </div>
         </div>
+
     </main>
 
     <footer>
