--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 <body>
     <header>
         <div class="logo-principal">
-            <a href="index.html"><img src="imagens/logo-agata-cruz.png" alt="Marca reduzida 'Ágata Cruz', apenas com as letras iniciais. Letra A e letra C."></a>
+            <a href="index.html"><img src="imagens/logo-agata-cruz.png"
+                    alt="Marca reduzida 'Ágata Cruz', apenas com as letras iniciais. Letra A e letra C."></a>
         </div>
         <nav id="menu-principal">
             <a href="#">sobre.</a>
@@ -31,14 +32,12 @@
     </header>
 
     <main>
-        <div class="bloco-foto-texto">
-            <div class="foto-principal">
-                <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
-            </div>
-            <div class="texto-principal">
-                <span>Prazer</span>
-                <span class="nome">, Ágata Cruz</span>
-            </div>
+        <div class="foto-principal">
+            <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
+        </div>
+        <div class="texto-principal">
+            <span>Prazer,</span><br>
+            <span class="nome">Ágata Cruz</span>
         </div>
 
     </main>
