--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">
                 <div id="linkedin-id"></div>
             </a>
-            <a href="#">
+            <a href="mailto:agatacruzdesign@gmail.com">
                 <div id="email-id"></div>
             </a>
         </section>
