--- a/index.html
+++ b/index.html
@@ -32,37 +32,43 @@
     </header>
 
     <main>
-        <section>
-            <div class="foto-principal">
+        <!-- <div class="coluna1"> -->
+            <section>
+                <div class="foto-principal">
+                    <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
+                </div>
+                <div class="texto-principal">
+                    <span>Prazer,</span><br>
+                    <span class="nome">Ágata Cruz</span><br>
+                    <span>WebDesigner</span>
+                </div>
+            </section>
+            <section class="lista-itens">
+                <div class="item-lista"><a href="#">Sobre Mim</a></div>
+                <div class="item-lista"><a href="#">Fale Comigo</a></div>
+                <div class="item-lista"><a href="#">GitHub</a></div>
+            </section>
+            <section class="links-sociais">
+                <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+                    <div id="instagram-id"></div>
+                </a>
+                <a href="https://www.behance.net/agatadesigner" target="_blank">
+                    <div id="behance-id"></div>
+                </a>
+                <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">
+                    <div id="linkedin-id"></div>
+                </a>
+                <a href="mailto:agatacruzdesign@gmail.com">
+                    <div id="email-id"></div>
+                </a>
+            </section>
+        <!-- </div> -->
+
+        <div class="coluna2">
+            <div class="foto-principal2">
                 <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
             </div>
-            <div class="texto-principal">
-                <span>Prazer,</span><br>
-                <span class="nome">Ágata Cruz</span><br>
-                <span>WebDesigner</span>
-            </div>
-        </section>
-
-        <section class="lista-itens">
-            <div class="item-lista"><a href="#">Sobre Mim</a></div>
-            <div class="item-lista"><a href="#">Fale Comigo</a></div>
-            <div class="item-lista"><a href="#">GitHub</a></div>
-        </section>
-
-        <section class="links-sociais">
-            <a href="https://www.instagram.com/agatafazsites/" target="_blank">
-                <div id="instagram-id"></div>
-            </a>
-            <a href="https://www.behance.net/agatadesigner" target="_blank">
-                <div id="behance-id"></div>
-            </a>
-            <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">
-                <div id="linkedin-id"></div>
-            </a>
-            <a href="mailto:agatacruzdesign@gmail.com">
-                <div id="email-id"></div>
-            </a>
-        </section>
+        </div>
 
     </main>
 
