add laptop responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,19 @@
     </header>
 
     <main>
-        <!-- <div class="coluna1"> -->
+        
+        <div class="coluna1">
+            <div class="fake-header">
+                <div class="logo-principal">
+                    <a href="index.html"><img src="imagens/logo-agata-cruz.png"
+                            alt="Marca reduzida 'Ágata Cruz', apenas com as letras iniciais. Letra A e letra C."></a>
+                </div>
+                <nav id="menu-principal">
+                    <a href="#">sobre.</a>
+                    <a href="#">trabalhos.</a>
+                    <a href="#">serviços.</a>
+                </nav>
+            </div>
             <section>
                 <div class="foto-principal">
                     <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
@@ -62,12 +74,10 @@
                     <div id="email-id"></div>
                 </a>
             </section>
-        <!-- </div> -->
+        </div>
 
         <div class="coluna2">
-            <div class="foto-principal2">
-                <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
-            </div>
+            <div class="foto-principal2"></div>
         </div>
 
     </main>
