edit responsive style

--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
                 </div>
             </section>
             <section class="lista-itens">
-                <div class="item-lista"><a href="#">Sobre Mim</a></div>
+                <div id="item-lista-about-id" class="item-lista"><a href="about.html">Sobre Mim</a></div>
                 <div class="item-lista"><a href="#">Fale Comigo</a></div>
-                <div class="item-lista"><a href="#">GitHub</a></div>
+                <div class="item-lista"><a href="https://github.com/agatacrz/" target="_blank">GitHub</a></div>
             </section>
             <section class="links-sociais">
                 <a href="https://www.instagram.com/agatafazsites/" target="_blank">
