edit final 1024px reponsive

--- a/index.html
+++ b/index.html
@@ -49,15 +49,17 @@
                 <div class="foto-principal">
                     <img src="imagens/foto-principal-agata-cruz-mobile.jpg" alt="Foto Ágata Cruz sorrindo de perfil.">
                 </div>
-                <div class="texto-principal">
-                    <span>Prazer,</span><br>
-                    <span class="nome">Ágata Cruz</span><br>
-                    <span>WebDesigner</span>
+                <div class="caixa-texto">
+                    <div class="texto-principal">
+                        <span class="apresentacao"><p>Prazer,</p></span><br>
+                        <span class="nome"><p>Ágata Cruz</p></span><br>
+                        <span class="descricao"><p>WebDesigner</p></span>
+                    </div>
                 </div>
             </section>
             <section class="lista-itens">
                 <div id="item-lista-about-id" class="item-lista"><a href="about.html">Sobre Mim</a></div>
-                <div class="item-lista"><a href="#">Fale Comigo</a></div>
+                <div class="item-lista"><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></div>
                 <div class="item-lista"><a href="https://github.com/agatacrz/" target="_blank">GitHub</a></div>
             </section>
             <section class="links-sociais">
