start page services

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                     alt="Marca reduzida 'Ágata Cruz', apenas com as letras iniciais. Letra A e letra C."></a>
         </div>
         <nav id="menu-principal">
-            <a href="#">sobre.</a>
-            <a href="#">trabalhos.</a>
-            <a href="#">serviços.</a>
+            <a href="about.html">sobre.</a>
+            <a href="works.html">trabalhos.</a>
+            <a href="services.html">serviços.</a>
         </nav>
     </header>
 
@@ -40,9 +40,9 @@
                             alt="Marca reduzida 'Ágata Cruz', apenas com as letras iniciais. Letra A e letra C."></a>
                 </div>
                 <nav id="menu-principal">
-                    <a href="#">sobre.</a>
-                    <a href="#">trabalhos.</a>
-                    <a href="#">serviços.</a>
+                    <a href="about.html">sobre.</a>
+                    <a href="works.html">trabalhos.</a>
+                    <a href="services.html">serviços.</a>
                 </nav>
             </div>
             <section>
@@ -83,10 +83,6 @@
         </div>
 
     </main>
-
-    <footer>
-
-    </footer>
 </body>
 
 </html>
