--- a/services.html
+++ b/services.html
@@ -33,27 +33,33 @@
         <section class="lista-de-itens">
             <details>
                 <summary>Site</summary>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Blog</summary>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Loja Virtual</summary>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Landing Page</summary>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Página de Vendas</summary>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
-                <summary>Consultoria de Marketing</summary>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <summary>Consultoria</summary>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
         </section>
     </main>
