--- a/services.html
+++ b/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,6 +17,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
 
 </head>
+
 <body>
     <header>
         <div class="logo-principal">
@@ -33,32 +35,44 @@
         <section class="lista-de-itens">
             <details>
                 <summary>Site</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
+                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
                 <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Blog</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
+                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
                 <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Loja Virtual</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
+                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
                 <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Landing Page</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
+                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
                 <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Página de Vendas</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
+                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
                 <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
             <details>
                 <summary>Consultoria</summary>
-                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
+                <p class="descricao-servicos">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatibus
+                    consequatur numquam pariatur laborum quae adipisci quo quisquam. Eos maxime quos dignissimos nulla
+                    ipsam ratione, aliquid ex soluta impedit, facilis at!</p>
                 <a class="link-orcamento" href="#">Solicitar Orçamento</a>
             </details>
         </section>
@@ -82,4 +96,5 @@
     </footer>
 
 </body>
+
 </html>
