finish page services

--- a/services.html
+++ b/services.html
@@ -32,6 +32,9 @@
     </header>
 
     <main>
+        <div class="title-services">
+            <p>Serviços</p>
+        </div>
         <section class="lista-de-itens">
             <details>
                 <summary>Site</summary>
