edit page works

--- a/works.html
+++ b/works.html
@@ -27,7 +27,23 @@
             <a href="services.html">serviços.</a>
         </nav>
     </header>
-
+    <main>
+        <section class="portfolio-item">
+            <h3>Gabrife Seguros</h3>
+            <img src="imagens/Mockup_3.jpg" alt="">
+            <div class="links-item-portfolio"><a href="https://gabrife.com.br/" target="_blank">abrir</a><a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a></div>
+        </section>
+        <section class="portfolio-item">
+            <h3>Frente e Verso</h3>
+            <img src="imagens/Mockup_3.jpg" alt="">
+            <div class="links-item-portfolio"><a href="https://frenteeverso.com/" target="_blank">abrir</a><a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a></div>
+        </section>
+        <section class="portfolio-item">
+            <h3>Fernanda Carvalho</h3>
+            <img src="imagens/Mockup_3.jpg" alt="">
+            <div class="links-item-portfolio"><a href="https://aluzdamaternidade.com.br/" target="_blank">abrir</a><a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a></div>
+        </section>
+    </main>
     <footer>
         <section class="links-sociais">
             <a href="https://www.instagram.com/agatafazsites/" target="_blank">
