--- a/works.html
+++ b/works.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,6 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header>
         <div class="logo-principal">
@@ -31,17 +33,35 @@
         <section class="portfolio-item">
             <h3>Gabrife Seguros</h3>
             <img src="imagens/Mockup_3.jpg" alt="">
-            <div class="links-item-portfolio"><a href="https://gabrife.com.br/" target="_blank">abrir</a><a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a></div>
+            <div class="item-foto-links">
+                <img class="desktop-img" src="imagens/Mockup_3.jpg" alt="">
+                <div class="links-item-portfolio">
+                    <a href="https://gabrife.com.br/" target="_blank">abrir</a>
+                    <a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a>
+                </div>
+            </div>
         </section>
         <section class="portfolio-item">
             <h3>Frente e Verso</h3>
             <img src="imagens/Mockup_3.jpg" alt="">
-            <div class="links-item-portfolio"><a href="https://frenteeverso.com/" target="_blank">abrir</a><a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a></div>
+            <div class="item-foto-links">
+                <img class="desktop-img" src="imagens/Mockup_3.jpg" alt="">
+                <div class="links-item-portfolio">
+                    <a href="https://frenteeverso.com/" target="_blank">abrir</a>
+                    <a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a>
+                </div>
+            </div>
         </section>
         <section class="portfolio-item">
             <h3>Fernanda Carvalho</h3>
             <img src="imagens/Mockup_3.jpg" alt="">
-            <div class="links-item-portfolio"><a href="https://aluzdamaternidade.com.br/" target="_blank">abrir</a><a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a></div>
+            <div class="item-foto-links">
+                <img class="desktop-img" src="imagens/Mockup_3.jpg" alt="">
+                <div class="links-item-portfolio">
+                    <a href="https://aluzdamaternidade.com.br/" target="_blank">abrir</a>
+                    <a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a>
+                    </div>
+            </div>
         </section>
     </main>
     <footer>
@@ -58,4 +78,5 @@
         </section>
     </footer>
 </body>
+
 </html>
