start page about

--- a/about.html
+++ b/about.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quem é Ágata?</title>
+
+    <link rel="stylesheet" href="estilos/about-style.css" media="all">
+    <link rel="stylesheet" href="estilos/about-media-query.css">
+
+    <link rel="shortcut icon" href="imagens/favicon-agata-cruz-logo.png" type="image/x-icon">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@200;300;400;500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>Em breve</h1>
+    <header>
+        <div class="logo-principal">
+            <a href="index.html"><img src="imagens/logo-agata-cruz.png"
+                    alt="Marca reduzida 'Ágata Cruz', apenas com as letras iniciais. Letra A e letra C."></a>
+        </div>
+        <nav id="menu-principal">
+            <a href="about.html">sobre.</a>
+            <a href="works.html">trabalhos.</a>
+            <a href="services.html">serviços.</a>
+        </nav>
+    </header>
 </body>
 </html>
