edit page about

--- a/about.html
+++ b/about.html
@@ -27,5 +27,22 @@
             <a href="services.html">serviços.</a>
         </nav>
     </header>
+    <main>
+        <div id="foto-minha-jornada"></div>
+
+        <p id="minha-jornada">
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+            <br>
+            <br>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+            <br>
+            <br>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+        </p>
+
+        <h2 class="titulo">Certificações</h2>
+        <h2 class="titulo">Competências</h2>
+        <p class="competencias">Design Sprint • UX • Inteligência Emocional • Design Thinking • CX • Lógica de Programação • Algoritmo • Organização • HTML • CSS • WordPress • Elementor • Git/Github • Ecommerce • Mídias Sociais</p>
+    </main>
 </body>
 </html>
