--- a/about.html
+++ b/about.html
@@ -41,8 +41,30 @@
         </p>
 
         <h2 class="titulo">Certificações</h2>
+        <ul class="certificacoes">
+            <li><strong>Pacote Adobe / Computação Gráfica</strong> BY Escola SAGA - School of Art end Game Animation</li>
+            <li><strong>Formação em Marketing Digital</strong> BY São Paulo Digital School</li>
+            <li><strong>Comunicação e Oratória</strong> BY Escola Conquer</li>
+            <li><strong>Reaprendizagem Criativa</strong> BY Murilo Gun</li>
+            <li><strong>Copywriting</strong> BY Rock University</li>
+        </ul>
         <h2 class="titulo">Competências</h2>
         <p class="competencias">Design Sprint • UX • Inteligência Emocional • Design Thinking • CX • Lógica de Programação • Algoritmo • Organização • HTML • CSS • WordPress • Elementor • Git/Github • Ecommerce • Mídias Sociais</p>
+
+        <div class="link-perfil-completo">
+            <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">Ver perfil completo no LinkedIn</a>
+        </div>
+
+        <div class="fale-comigo"><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></div>
+
+        <section class="links-sociais">
+            <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+                <div id="instagram-id"></div>
+            </a>
+            <a href="mailto:agatacruzdesign@gmail.com">
+                <div id="email-id"></div>
+            </a>
+        </section>
     </main>
 </body>
 </html>
