edit page about

--- a/about.html
+++ b/about.html
@@ -28,41 +28,60 @@
         </nav>
     </header>
     <main>
-        <div id="foto-minha-jornada"></div>
+        <div class="coluna1">
+            <div id="foto-minha-jornada"></div>
+            <div class="fale-comigo-desktop"><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></div>
+            <section class="links-sociais-desktop">
+                <a href="https://www.instagram.com/agatafazsites/" target="_blank">
+                    <div class="instagram-id"></div>
+                </a>
+                <a href="mailto:agatacruzdesign@gmail.com">
+                    <div class="email-id"></div>
+                </a>
+            </section>
+        </div>
 
-        <p id="minha-jornada">
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
-            <br>
-            <br>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
-            <br>
-            <br>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
-        </p>
+        <div class="coluna2">
+            <p id="minha-jornada">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+                <br>
+                <br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+                <br>
+                <br>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quo repellendus itaque ducimus, similique eaque fugit consequuntur? Laborum, dolores nobis incidunt ex doloribus, beatae hic natus vitae blanditiis dolorum expedita voluptate!
+            </p>
 
-        <h2 class="titulo">Certificações</h2>
-        <ul class="certificacoes">
-            <li><strong>Pacote Adobe / Computação Gráfica</strong> BY Escola SAGA - School of Art end Game Animation</li>
-            <li><strong>Formação em Marketing Digital</strong> BY São Paulo Digital School</li>
-            <li><strong>Comunicação e Oratória</strong> BY Escola Conquer</li>
-            <li><strong>Reaprendizagem Criativa</strong> BY Murilo Gun</li>
-            <li><strong>Copywriting</strong> BY Rock University</li>
-        </ul>
-        <h2 class="titulo">Competências</h2>
-        <p class="competencias">Design Sprint • UX • Inteligência Emocional • Design Thinking • CX • Lógica de Programação • Algoritmo • Organização • HTML • CSS • WordPress • Elementor • Git/Github • Ecommerce • Mídias Sociais</p>
+            <div class="coluna2b">
+                <div class="grupo1">
+                    <h2 class="titulo">Certificações</h2>
+                    <ul class="certificacoes">
+                        <li><strong>Pacote Adobe / Computação Gráfica</strong> BY Escola SAGA - School of Art end Game Animation</li>
+                        <li><strong>Formação em Marketing Digital</strong> BY São Paulo Digital School</li>
+                        <li><strong>Comunicação e Oratória</strong> BY Escola Conquer</li>
+                        <li><strong>Reaprendizagem Criativa</strong> BY Murilo Gun</li>
+                        <li><strong>Copywriting</strong> BY Rock University</li>
+                    </ul>
+                </div>
+                <div class="grupo2">
+                    <h2 class="titulo">Competências</h2>
+                    <p class="competencias">Design Sprint • UX • Inteligência Emocional • Design Thinking • CX • Lógica de Programação • Algoritmo • Organização • HTML • CSS • WordPress • Elementor • Git/Github • Ecommerce • Mídias Sociais</p>
+                </div>
+            </div>
 
-        <div class="link-perfil-completo">
-            <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">Ver perfil completo no LinkedIn</a>
+            <div class="link-perfil-completo">
+                <a href="https://www.linkedin.com/in/agatacruz/" target="_blank">Ver perfil completo no LinkedIn</a>
+            </div>
         </div>
 
         <div class="fale-comigo"><a href="https://wa.me/5571986261219" target="_blank">Fale Comigo</a></div>
 
         <section class="links-sociais">
             <a href="https://www.instagram.com/agatafazsites/" target="_blank">
-                <div id="instagram-id"></div>
+                <div class="instagram-id"></div>
             </a>
             <a href="mailto:agatacruzdesign@gmail.com">
-                <div id="email-id"></div>
+                <div class="email-id"></div>
             </a>
         </section>
     </main>
