--- a/works.html
+++ b/works.html
@@ -32,9 +32,9 @@
     <main>
         <section class="portfolio-item">
             <h3>Gabrife Seguros</h3>
-            <img src="imagens/Mockup_3.jpg" alt="">
+            <img src="imagens/site-gabrife-mockup.jpg" alt="">
             <div class="item-foto-links">
-                <img class="desktop-img" src="imagens/Mockup_3.jpg" alt="">
+                <img class="desktop-img" src="imagens/site-gabrife-mockup.jpg" alt="">
                 <div class="links-item-portfolio">
                     <a href="https://gabrife.com.br/" target="_blank">abrir</a>
                     <a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a>
@@ -43,9 +43,9 @@
         </section>
         <section class="portfolio-item">
             <h3>Frente e Verso</h3>
-            <img src="imagens/Mockup_3.jpg" alt="">
+            <img src="imagens/frenteeverso.jpg" alt="">
             <div class="item-foto-links">
-                <img class="desktop-img" src="imagens/Mockup_3.jpg" alt="">
+                <img class="desktop-img" src="imagens/frenteeverso.jpg" alt="">
                 <div class="links-item-portfolio">
                     <a href="https://frenteeverso.com/" target="_blank">abrir</a>
                     <a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a>
@@ -54,9 +54,9 @@
         </section>
         <section class="portfolio-item">
             <h3>Fernanda Carvalho</h3>
-            <img src="imagens/Mockup_3.jpg" alt="">
+            <img src="imagens/aluzdamaternidade.jpg" alt="">
             <div class="item-foto-links">
-                <img class="desktop-img" src="imagens/Mockup_3.jpg" alt="">
+                <img class="desktop-img" src="imagens/aluzdamaternidade.jpg" alt="">
                 <div class="links-item-portfolio">
                     <a href="https://aluzdamaternidade.com.br/" target="_blank">abrir</a>
                     <a href="https://www.behance.net/agatadesigner" target="_blank">ver no Behance</a>
